--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,6 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://milesofcodes.com/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Miles of Codes'
+[module]
+[[module.imports]]
+path = "github.com/hugo-porto/theme"
