--- a/data/sections/experience.toml
+++ b/data/sections/experience.toml
@@ -1,17 +1,17 @@
 [[company]]
   name = "Amazon Web Services"
   role = "Manufacturing Solutions Architect"
-  date = "Jan. 2023 - Present"
+  date = "Jan. 2023 – Present"
   text = [
-    "Design cloud and edge architectures that help manufacturing customers modernize operations with AI/ML and IoT.",
-    ]
+    "As a Manufacturing Solutions Architect, I design cloud and edge architectures that help customers modernize operations with IoT and applied ML. I build proofs of concept for predictive maintenance, safety monitoring, and quality control, while publishing technical content that guides adoption of best practices."
+  ]
 
 [[company]]
   name = "Hewlett Packard Inc."
   role = "Software Development Intern"
   date = "Jun. 2022 – Aug. 2022"
   text = [
-    "Built enterprise microservices in Java using Spring Boot and collaborated with distributed development teams.",
+    "Built enterprise microservices with Java and Spring Boot and collaborated across distributed teams. Automated key processes with Python, reducing manual work and streamlining reporting workflows."
   ]
 
 [[company]]
@@ -19,6 +19,5 @@
   role = "ML/Cybersecurity Research Assistant"
   date = "Oct. 2021 – Jun. 2022"
   text = [
-    "Applied ML algorithms such as logistic regression to classify malware datasets and reduce compute costs through feature selection.",
-    "Documented and presented findings following IEEE standards while supporting academic research in cybersecurity."
+    "Conducted research on applying machine learning to malware detection, focusing on efficiency and feature reduction to lower compute costs. Documented results under IEEE standards and supported academic publications in cybersecurity."
   ]
